src/objects/Project_Snapshot__c.object
<CustomObject>
    <description>Force.com Labs - PM - Tracks daily information about active projects.</description>
    <fields>
        <fullName>Blocked_Task_Count__c</fullName>
        <label>Blocked Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complete_Task_Count__c</fullName>
        <label>Complete Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expense_Budget__c</fullName>
        <label>Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Estimate__c</fullName>
        <label>Expense Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Incurred__c</fullName>
        <label>Expense Incurred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours_Budget__c</fullName>
        <label>Hours Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Estimate__c</fullName>
        <label>Hours Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Incurred__c</fullName>
        <label>Hours Incurred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incomplete_Milestones__c</fullName>
        <label>Incomplete Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incomplete_Top_Milestones__c</fullName>
        <label>Incomplete Top Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Late_Task_Count__c</fullName>
        <label>Late Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Task_Count__c</fullName>
        <label>Open Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Project Snapshot</label>
    <nameField>
        <displayFormat>PS{000000}</displayFormat>
        <label>Project Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>